feat(browser) detect browser MAUI WAP Browser feat(os) detect os MRE feat(device) detect brand Bush model: SPIRA D5 Dual Camera feat(device) detect brand Cat model: B100 feat(device) detect brand DEXP model: Larus TV1 feat(device) detect brand Lava models: Discover 136, KKT Quadra, KKT40 Power Plus feat(device) detect brand Explay model: Fin feat(device) detect brand Artel models: V5, X4, F5, M5 feat(device) detect brand MAXVI models: P11, K10, X300, X500, X800 feat(device) detect brand Videocon model: V1585 feat(device) detect brand MicroMax models: X291, X246, X458, X312, X252

--- a/Tests/Parser/Client/fixtures/browser.yml
+++ b/Tests/Parser/Client/fixtures/browser.yml
@@ -2567,3 +2567,11 @@
     version: 20.93.0
     engine: Blink
     engine_version: ""
+-
+  user_agent: FLY_E141TV_PLUS/ WAP Browser/MAUI(HTTP PGDL;HTTPS)Profile/Q03C1-2.40 ru-RU
+  client:
+    type: browser
+    name: MAUI WAP Browser
+    version: ""
+    engine: ""
+    engine_version: ""
