--- a/regexes/client/browsers.yml
+++ b/regexes/client/browsers.yml
@@ -1772,4 +1772,8 @@
 - regex: 'GOGGalaxyClient/(?:(\d+[\.\d]+))?'
   name: 'GOG Galaxy'
   version: '$1'
-  
+
+# MAUI Wap Browser
+- regex: 'WAP Browser/MAUI|(?:\w+)?Maui Wap Browser|MAUI[- ]Browser'
+  name: 'MAUI WAP Browser'
+  version: ''
