--- a/Tests/Parser/fixtures/oss.yml
+++ b/Tests/Parser/fixtures/oss.yml
@@ -1087,3 +1087,10 @@
     short_name: TOS
     version: ""
     platform: x64
+-
+  user_agent: SAGETEL61D_11C_HW MRE/3.1.00900;MAUI/ARTEL_M5_V07_20171117_MP;BDATE/2017/11/17 15:42;LCD/128160;CHIP/MT6261;KEY/Normal;TOUCH/0;CAMERA/1;SENSOR/0;DEV/SAGETEL61D_11C_HW;WAP Browser/MAUI ;GMOBI/001;MBOUNCE/002;MOMAGIC/003;INDEX/004;SPICEI2I/005;GAMELOFT/006;
+  os:
+    name: MRE
+    short_name: MRE
+    version: "3.1"
+    platform: ""
