--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -161,6 +161,13 @@
   version: '$1'
 
 ##########
+# MRE / MAUI Runtime Environment
+##########
+- regex: 'MRE/(\d+)\.(\d+).*;MAUI'
+  name: 'MRE'
+  version: '$1.$2'
+
+##########
 # Linux
 ##########
 - regex: '(Ordissimo|webissimo3)'
