feat(device) detect brand Huawei model: P smart (2020) (POT-LX1A) feat(device) detect brand Pixus model: Sprint feat(device) detect brand Xiaomi model: MiTV 4A (MiTV-MSSP0) feat(device) detect brand Invin model: KM7 feat(device) detect brand Ark model: Wizard 2 feat(device) detect brand DEXP models: 5.0" AL350, 4.5" AL250 feat(device) detect brand Black Fox model: B8 Fox+ (BMM442S) feat(device) detect brand Ulefone models: Armor 3W, Armor 3WT feat(device) detect brand BQ models: Magic O (BQ-6424L), Aurora SE (BQ-5732L), Jeans (BQ-5519G) feat(device) detect brand Alcatel models: 3C (2019) (5006D), 1S (5024F), 3X (2019) (5048I) feat(device) detect brand Wiko models: View Go (W_P130) feat(device) detect brand Vestel models: Venus E4

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -1095,7 +1095,7 @@ Arian Space:
 
 # Alcatel (alcatelmobile.com)
 Alcatel:
-  regex: 'Alcatel|Alc(?!or )[a-z0-9]+|One[ _]?Touch|idol3|TIMXL|(?:(?:4003[AJ]|4009[ADEFIKMSX]|4013[DEJKMX]|4014[ADEKMX]|4015[ADNTX]|4016[ADX]|4017[ADEFSX]|4018[ADEFMX]|4024[EDX]|4027[ADNX]|4028[AEJS]|4032[ADEX]|4034L|4034[ADEFGX]|4035[ADXY]|4045[ADEX]|4047[ADFGNX]|4049[DEGMX]|4060[SW]|A466BG|A621BL|4114E|5001[ADJTU]|5002[ADF]|5003[ADG]|5007[AU]|5008[DUY]|5009[AD]|5010[DEGSUX]|5011A|5012[DFG]|5015[ADEX]|5016[AXJ]|5017[ABDEOX]|5019D|5022[EDX]|5023[EF]|5024[ADJ]|5025[DEG]|5026[ADJ]|5027B|5028[AYD]|5029[EYD]|5030D|5032W|5033[AEFXDJGMOTXY]|5034D|5036D|5038[ADEX]|5039[D]|5041[CD]|5042[ADEFGWXT]|5044[ADGIKOPSTY]|5045[ADFGIJTXY]|5046[ADGIJSTUY]|5047[DIUY]|5048[AYU]|5049[EGSWZ]|5050[ASXY]|5051[ADEJMTWX]|5052[ADY]|5053[AKY]|5054[ADNSTWX]|5056[ADEGIJMNTUWX]|5057M|5058[AIY]|5059[ADXYZIST]|5060D|5061[KU]|5065[ADNWX]|5070D|5080[ADFQUX]|5085[ABCDGHIJNOQY]|5086[ADY]|5090[AIY]|5095[IKY]|5098[OS]|5099[ADYUI]|5116J|5145A|6016[ADEX]|6036[AXY]|6037[BKY]|6039[AHJKY]|6043[AD]|6044D|6045[BFIKOYX]|6050[AFY]|6055[ABDHIKPUYZ]|6058[ADX]|6060S|6062W|6070K|7040[ADEFKRT]|7041[DX]|7042A|7043[AEKY]|7044[AX]|7045Y|7048[ASWX]|7053D|7055A|7070X|8030Y|8050[DEGX]|8063|8088[XQ]|9001[DIX]|9002X|9003[AX]|9024O|9005X|9026X|9007[ATX]|9008[ADIJNTUX]|9010X|9020A|9022X|9027[FTWX]|9203A|A(?:464BG|570BL|50[13]DL|57[17]VL|574BL)|I213|I216X)(?:_(?:EEA|RU))?)(?:[);/ ]|$)'
+  regex: 'Alcatel|Alc(?!or )[a-z0-9]+|One[ _]?Touch|idol3|TIMXL|(?:(?:4003[AJ]|4009[ADEFIKMSX]|4013[DEJKMX]|4014[ADEKMX]|4015[ADNTX]|4016[ADX]|4017[ADEFSX]|4018[ADEFMX]|4024[EDX]|4027[ADNX]|4028[AEJS]|4032[ADEX]|4034L|4034[ADEFGX]|4035[ADXY]|4045[ADEX]|4047[ADFGNX]|4049[DEGMX]|4060[SW]|A466BG|A621BL|4114E|5001[ADJTU]|5002[ADF]|5003[ADG]|5006D|5007[AU]|5008[DUY]|5009[AD]|5010[DEGSUX]|5011A|5012[DFG]|5015[ADEX]|5016[AXJ]|5017[ABDEOX]|5019D|5022[EDX]|5023[EF]|5024[ADJF]|5025[DEG]|5026[ADJ]|5027B|5028[AYD]|5029[EYD]|5030D|5032W|5033[AEFXDJGMOTXY]|5034D|5036D|5038[ADEX]|5039[D]|5041[CD]|5042[ADEFGWXT]|5044[ADGIKOPSTY]|5045[ADFGIJTXY]|5046[ADGIJSTUY]|5047[DIUY]|5048[AYUI]|5049[EGSWZ]|5050[ASXY]|5051[ADEJMTWX]|5052[ADY]|5053[AKY]|5054[ADNSTWX]|5056[ADEGIJMNTUWX]|5057M|5058[AIY]|5059[ADXYZIST]|5060D|5061[KU]|5065[ADNWX]|5070D|5080[ADFQUX]|5085[ABCDGHIJNOQY]|5086[ADY]|5090[AIY]|5095[IKY]|5098[OS]|5099[ADYUI]|5116J|5145A|6016[ADEX]|6036[AXY]|6037[BKY]|6039[AHJKY]|6043[AD]|6044D|6045[BFIKOYX]|6050[AFY]|6055[ABDHIKPUYZ]|6058[ADX]|6060S|6062W|6070K|7040[ADEFKRT]|7041[DX]|7042A|7043[AEKY]|7044[AX]|7045Y|7048[ASWX]|7053D|7055A|7070X|8030Y|8050[DEGX]|8063|8088[XQ]|9001[DIX]|9002X|9003[AX]|9024O|9005X|9026X|9007[ATX]|9008[ADIJNTUX]|9010X|9020A|9022X|9027[FTWX]|9203A|A(?:464BG|570BL|50[13]DL|57[17]VL|574BL)|I213|I216X)(?:_(?:EEA|RU))?)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: '5022[EDX]|5070D'
@@ -1164,7 +1164,7 @@ Alcatel:
       model: 'One Touch Astro'
     - regex: '5027B'
       model: 'One Touch Dawn'
-    - regex: '5024[AD]|5028Y'
+    - regex: '5024[ADF]|5028Y'
       model: '1S'
     - regex: '5002[AD]'
       model: '1B (2020)'
@@ -1306,7 +1306,7 @@ Alcatel:
       model: 'A30 Fierce'
     - regex: '5085[GO]'
       model: 'A50'
-    - regex: '5048[AYU]'
+    - regex: '5048[AYUI]'
       model: '3X (2019)'
     - regex: '5049W'
       model: 'Revvl'
@@ -1404,6 +1404,8 @@ Alcatel:
       model: '1V (2020)'
     - regex: '5003[ADG]'
       model: '1C (2019)'
+    - regex: '5006D'
+      model: '3C (2019)'
     - regex: '5024J'
       model: '1S'
     - regex: '5028[AD]'
@@ -1907,7 +1909,7 @@ Assistant:
 
 # Ark (Ark Electronic Technology)
 Ark:
-  regex: '(ARK[_ -])?Benefit[_ -]([^/;]*)(?: Build|\))|EDGE A5HD|Elf_S8|ICON (R40\+|R45)|Impulse[ _](P[12])|Wizard_1(?:[);/ ]|$)'
+  regex: '(ARK[_ -])?Benefit[_ -]([^/;]*)(?: Build|\))|EDGE A5HD|Elf_S8|ICON (R40\+|R45)|Impulse[ _](P[12])|Wizard_[12](?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: '(?:ARK[_ -])?Benefit[_ -]([^/;]*)(?: Build|\))'
@@ -1920,8 +1922,8 @@ Ark:
       model: 'Edge $1'
     - regex: 'ICON (R40\+|R45)'
       model: 'Icon $1'
-    - regex: 'Wizard_1'
-      model: 'Wizard 1'
+    - regex: 'Wizard_([12])'
+      model: 'Wizard $1'
     - regex: 'Elf_S8(?:[);/ ]|$)'
       model: 'Elf S8'
 
@@ -2400,13 +2402,15 @@ Bluboo:
 
 # Black Fox
 'Black Fox':
-  regex: 'BMM[ _-]?(?:44[123]D|441S|431D|533D|54[12]S|541[ABW]|54[123]D|543S|531[ABD])(?:[);/ ]|$)'
+  regex: 'BMM[ _-]?(?:44[123]D|44[12]S|431D|533D|54[12]S|541[ABW]|54[123]D|543S|531[ABD])(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'BMM443D'
       model: 'B7 Fox+'
     - regex: 'BMM441S'
       model: 'B8 Fox'
+    - regex: 'BMM442S'
+      model: 'B8 Fox+'
     - regex: 'BMM442D'
       model: 'B7'
     - regex: 'BMM531D'
@@ -2807,14 +2811,18 @@ bq:
       model: 'Strike LTE'
     - regex: 'BQ(?:ru)?-(?:6035L)(?:[);/ ]|$)'
       model: 'Strike Power Max'
-    - regex: 'BQ(?:ru)?-(5535L)(?:[);/ ]|$)'
+    - regex: 'BQ(?:ru)?-(?:5535L)(?:[);/ ]|$)'
       model: 'Strike Power Plus'
-    - regex: 'BQ(S|ru)?-(5070|6040L)(?:[);/ ]|$)'
+    - regex: 'BQ(S|ru)?-(?:5070|6040L)(?:[);/ ]|$)'
       model: 'Magic'
+    - regex: 'BQ(S|ru)?-(?:6424L)(?:[);/ ]|$)'
+      model: 'Magic O'
     - regex: 'BQ(?:S|ru)?-(?:5730L)(?:[);/ ]|$)'
       model: 'Magic C'
     - regex: 'BQ(?:S|ru)?-(?:5731L)(?:[);/ ]|$)'
       model: 'Magic S'
+    - regex: 'BQ(?:S|ru)?-(?:5732L)(?:[);/ ]|$)'
+      model: 'Aurora SE'
     - regex: 'BQ-9011[G]?(?:[);/ ]|$)'
       model: 'Vision'
       device: 'tablet'
@@ -2875,7 +2883,7 @@ bq:
       model: 'Spring'
     - regex: 'BQ-5700L(?:[);/ ]|$)'
       model: 'Space X'
-    - regex: 'BQ-(?:5591|5518G)(?:[);/ ]|$)'
+    - regex: 'BQ-(?:5591|551[89]G)(?:[);/ ]|$)'
       model: 'Jeans'
     - regex: 'BQ-5522'
       model: 'Next'
@@ -3915,7 +3923,7 @@ Desay:
 
 # DEXP
 DEXP:
-  regex: 'DEXP|(?:Ursus|Ixion)[ _]([^;/)]+)|H135[ _]Build|Larus_TV1|(SENIOR|F4[38]D8000K|VA[12]10|VA170|ML450|MS[56]50|BL[12]50|BS155|BS160|BS[1256]50|AL[12]40|AS260| (?:B450|B340|A1[45]0))(?:[);/ ]|$)'
+  regex: 'DEXP|(?:Ursus|Ixion)[ _]([^;/)]+)|H135[ _]Build|Larus_TV1|(SENIOR|F4[38]D8000K|VA[12]10|VA170|ML450|MS[56]50|BL[12]50|BS155|BS160|BS[1256]50|AL[12]40|AL[23]50|AS260| (?:B450|B340|A1[45]0))(?:[);/ ]|$)'
   device: 'smartphone'
   models:
 
@@ -3923,6 +3931,10 @@ DEXP:
       model: 'Ixion $1'
     - regex: '(ML450|MS[56]50)(?:[);/ ]|$)'
       model: 'Ixion $1'
+    - regex: 'AL250(?:[);/ ]|$)'
+      model: '4.5" AL250'
+    - regex: 'AL350(?:[);/ ]|$)'
+      model: '5.0" AL350'
     - regex: 'AS260(?:[);/ ]|$)'
       model: '5.85" AS260'
       device: 'phablet'
@@ -6175,6 +6187,8 @@ Huawei:
       model: 'P smart'
     - regex: 'POT-(?:LX(?:[13]|1T|2J|1AF)|AL00)(?:[);/ ]|$)'
       model: 'P smart (2019)'
+    - regex: 'POT-LX1A(?:[);/ ]|$)'
+      model: 'P smart (2020)'
     - regex: 'PPA-LX2(?:[);/ ]|$)'
       model: 'P smart (2021)'
     - regex: 'STK-LX1(?:[);/ ]|$)'
@@ -10816,6 +10830,8 @@ Pixus:
       model: 'Play Three v$1'
     - regex: 'Play Two'
       model: 'Play Two'
+    - regex: 'Pixus[ _]Sprint'
+      model: 'Sprint'
     - regex: 'Touch 7 3G'
       model: 'Touch 7 3G'
     - regex: 'Pixus[ _]hiMax'
@@ -13580,7 +13596,7 @@ UTStarcom:
 
 # Ulefone
 Ulefone:
-  regex: 'Ulefone|Gemini Pro|Power_[356]|S10_Pro|(?:Armor(?:(?:[ _])(?:[2367]|X[236]|6[SE]|X))?|U00[78][ _]Pro|Be[ _]X|Be[ _]Touch(?:[ _][23])?|Be[ _](?:One|Pure)(?:[ _]Lite)?)(?:[);/ ]|$)'
+  regex: 'Ulefone|Gemini Pro|Power_[356]|S10_Pro|(?:Armor(?:(?:[ _])(?:[2367]|X[236]|6[SE]|3WT|3W|X))?|U00[78][ _]Pro|Be[ _]X|Be[ _]Touch(?:[ _][23])?|Be[ _](?:One|Pure)(?:[ _]Lite)?)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'S10_Pro'
@@ -13601,26 +13617,24 @@ Ulefone:
       model: 'U007 Pro'
     - regex: 'U008 Pro'
       model: 'U008 Pro'
-    - regex: 'Armor[ _]2(?:[);/ ]|$)'
-      model: 'Armor 2'
-    - regex: 'Armor[ _]3(?:[);/ ]|$)'
-      model: 'Armor 3'
-    - regex: 'Armor[ _]7(?:[);/ ]|$)'
-      model: 'Armor 7'
     - regex: 'Armor[ _]X([236])(?:[);/ ]|$)'
       model: 'Armor X$1'
     - regex: 'Armor[ _]6S(?:[);/ ]|$)'
       model: 'Armor 6S'
     - regex: 'Armor[ _]6E(?:[);/ ]|$)'
       model: 'Armor 6E'
-    - regex: 'Armor[ _]6(?:[);/ ]|$)'
-      model: 'Armor 6'
     - regex: 'Armor[ _]X5(?:[);/ ]|$)'
       model: 'Armor X5'
     - regex: 'Armor[ _]5S(?:[);/ ]|$)'
       model: 'Armor 5S'
     - regex: 'Armor[ _]X(?:[);/ ]|$)'
       model: 'Armor X'
+    - regex: 'Armor[ _]3W(?:[);/ ]|$)'
+      model: 'Armor 3W'
+    - regex: 'Armor[ _]3WT(?:[);/ ]|$)'
+      model: 'Armor 3WT'
+    - regex: 'Armor[ _]([2367])(?:[);/ ]|$)'
+      model: 'Armor $1'
     - regex: 'Armor(?:[);/ ]|$)'
       model: 'Armor'
     - regex: 'Gemini Pro(?:[);/ ]|$)'
@@ -13828,7 +13842,7 @@ Verykool:
 
 # Vestel
 Vestel:
-  regex: 'Venus[ _](GO|V[1-9]|Z[1-9]0)|V_?TAB|VP74|VT97PRO|VSP145M|VSP250[GS]|VSP355[GS]|V3_5580_Dual'
+  regex: 'Venus[ _](GO|E4|V[1-9]|Z[1-9]0)|V_?TAB|VP74|VT97PRO|VSP145M|VSP250[GS]|VSP355[GS]|V3_5580_Dual'
   device: 'smartphone'
   models:
     - regex: 'VT97PRO'
@@ -13864,6 +13878,8 @@ Vestel:
       model: 'Venus Z$1'
     - regex: 'Venus[ _]GO'
       model: 'Venus Go'
+    - regex: 'Venus[ _]E4'
+      model: 'Venus E4'
 
 # Videocon
 Videocon:
@@ -14134,7 +14150,7 @@ Wexler:
 
 # Wiko (wikomobile.com)
 Wiko:
-  regex: '(?:WIKO[_ -])|(?:WIKO-)?CINK_[a-z0-9_]+|(?:WIKO-)?HIGHWAY_[a-z0-9_]+|(?:WIKO-)?(?:Cink([^/;]*)|Highway([^/;]*)|Iggy|Stairway|Rainbow ?(Jam|Lite|Up)?|Darkside|Darkmoon|Darkfull|Darknight|Freddy|FEVER|Jerry[2]?|Sublim|Ozzy|JIMMY|Barry|Birdy|Bloom|Getaway|Goa(?!nna)|Kite|Robby|Lenny[2-9]?|Slide|Sunset[2-9]?|Sunny[2-9]?|Tommy[2-9]?|PULP(?: Fab)?|Wax|HARRY|Ridge(?: Fab)?|U FEEL(?: Prime| Lite)?|U PULSE(?: LITE)?|View2 Go|View XL|View Prime)(?: Plus)?(?: 4G)?(?: Build|$)?|W_(?:C800|K[346]00|P200|C200SN)|WC300|W-(V7[23]0|V8[30]0|P[36]11|K420|K510)-(TVM|EEA|SUN|OPE)|WIM Lite|W-K360-TV|W-U300|U307AS|CINK PEAX 2'
+  regex: '(?:WIKO[_ -])|(?:WIKO-)?CINK_[a-z0-9_]+|(?:WIKO-)?HIGHWAY_[a-z0-9_]+|(?:WIKO-)?(?:Cink([^/;]*)|Highway([^/;]*)|Iggy|Stairway|Rainbow ?(Jam|Lite|Up)?|Darkside|Darkmoon|Darkfull|Darknight|Freddy|FEVER|Jerry[2]?|Sublim|Ozzy|JIMMY|Barry|Birdy|Bloom|Getaway|Goa(?!nna)|Kite|Robby|Lenny[2-9]?|Slide|Sunset[2-9]?|Sunny[2-9]?|Tommy[2-9]?|PULP(?: Fab)?|Wax|HARRY|Ridge(?: Fab)?|U FEEL(?: Prime| Lite)?|U PULSE(?: LITE)?|View2 Go|View XL|View Prime)(?: Plus)?(?: 4G)?(?: Build|$)?|W_(?:C800|K[346]00|P130|P200|C200SN)|WC300|W-(V7[23]0|V8[30]0|P[36]11|K420|K510)-(TVM|EEA|SUN|OPE)|WIM Lite|W-K360-TV|W-U300|U307AS|CINK PEAX 2'
   device: 'smartphone'
   models:
     - regex: '(?:WIKO-)?Cink Peax 2'
@@ -14273,6 +14289,8 @@ Wiko:
       model: 'View 2'
     - regex: 'W_P200'
       model: 'View Max'
+    - regex: 'W_P130'
+      model: 'View Go'
     - regex: 'W-V800-(TVM|EEA|OPE)'
       model: 'View 3 Lite'
     - regex: 'W-K420-EEA'
@@ -14403,7 +14421,7 @@ POCO:
 
 # Xiaomi
 Xiaomi:
-  regex: 'Xiaomi(?!/(?:Miui|Mint[ ])Browser)|Mi9 Pro 5G|(?:MI [a-z0-9]+|Mi-4c|MI-One[ _]?[a-z0-9]+|MIX(?: 2S?)?)(?:[);/ ]|$)|HM (?:[^/;]+) (?:Build|MIUI)|(?:2014501|2014011|201481[12378]|201302[23]|2013061) Build|Redmi|MI_NOTE_Pro|POCOPHONE|(?:SHARK )?(KLE|MBU)-[AH]0|SKR-[AH]0|SKW-[AH]0|POCO F1|DLT-[AH]0|MIBOX[234]([_ ]PRO)?|MiTV4[CSX]?|MiTV-(MSSP1|AXSO0)|AWM-A0|MI CC 9 Meitu Edition|MiBOX1S|MiTV4A|M2006C3(?:L[IGC]|LVG|MN?G)|M2007J1SC|M2002J9[EG]|HM2014819|WT88047|M2004J(?:7[AB]|19)C|M2003J15SC|M2007J3S[CG]|HM NOTE 1(?:LTE|W)|MI[_ ]PLAY|XIG01'
+  regex: 'Xiaomi(?!/(?:Miui|Mint[ ])Browser)|Mi9 Pro 5G|(?:MI [a-z0-9]+|Mi-4c|MI-One[ _]?[a-z0-9]+|MIX(?: 2S?)?)(?:[);/ ]|$)|HM (?:[^/;]+) (?:Build|MIUI)|(?:2014501|2014011|201481[12378]|201302[23]|2013061) Build|Redmi|MI_NOTE_Pro|POCOPHONE|(?:SHARK )?(KLE|MBU)-[AH]0|SKR-[AH]0|SKW-[AH]0|POCO F1|DLT-[AH]0|MIBOX[234]([_ ]PRO)?|MiTV4[CSX]?|MiTV-(MSSP[01]|AXSO0)|AWM-A0|MI CC 9 Meitu Edition|MiBOX1S|MiTV4A|M2006C3(?:L[IGC]|LVG|MN?G)|M2007J1SC|M2002J9[EG]|HM2014819|WT88047|M2004J(?:7[AB]|19)C|M2003J15SC|M2007J3S[CG]|HM NOTE 1(?:LTE|W)|MI[_ ]PLAY|XIG01'
   device: 'smartphone'
   models:
     # specific smartphone models
@@ -14537,7 +14555,7 @@ Xiaomi:
     - regex: 'MiTV-MSSP1(?:[);/ ]|$)'
       model: 'MiTV 4S'
       device: 'tv'
-    - regex: '(?:MiTV-AXSO0|MiTV4(?:A|-ANSM0))(?:[);/ ]|$)'
+    - regex: '(?:MiTV-AXSO0|MiTV4(?:A|-ANSM0)|MiTV-MSSP0)(?:[);/ ]|$)'
       model: 'MiTV 4A'
       device: 'tv'
     - regex: '(MiTV)(4[CSX]|4)(?:[);/ ]|$)'
@@ -17446,7 +17464,7 @@ Dolamee:
 
 # INVIN
 Invin:
-  regex: 'INVIN[ _-](X[24]|KM6)(?:[);/ ]|$)'
+  regex: 'INVIN[ _-](X[24]|KM[67])(?:[);/ ]|$)'
   device: 'tv'
   model: '$1'
 
