feat(os) detect os linux Rosa
issue #6427

--- a/Tests/Parser/fixtures/oss.yml
+++ b/Tests/Parser/fixtures/oss.yml
@@ -1094,3 +1094,11 @@
     short_name: MRE
     version: "3.1"
     platform: ""
+-
+  user_agent: Mozilla/5.0 (X11; OS ROSA; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/86.0.4240.111 Safari/537.36
+  os:
+    name: Rosa
+    short_name: RSO
+    version: ""
+    platform: x64
+
