--- a/Tests/fixtures/feature_phone.yml
+++ b/Tests/fixtures/feature_phone.yml
@@ -109,7 +109,12 @@
 - 
   user_agent: GIONEE S80/Q03C MAUI-browser/MIDP2.0/CLDC1.1/Screen-240X320
   os: [ ]
-  client: null
+  client:
+    type: browser
+    name: MAUI WAP Browser
+    version: ""
+    engine: ""
+    engine_version: ""
   device:
     type: feature phone
     brand: Gionee
