--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -198,6 +198,10 @@
   name: '$1'
   version: '$2'
 
+- regex: 'OS ROSA; Linux'
+  name: 'Rosa'
+  version: ''
+
 # generic linux match -> end of file
 
 ##########
