feat(device) detect new brand Conquest models: S8, S6, S10, S11, S12, F2, S16 feat(device) detect brand Odys model: Pyro 7 Plus 3G

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -9952,7 +9952,7 @@ O2:
 
 # Odys
 Odys:
-  regex: 'ODYS[ _-]|IEOS[_ ]([^/;]+)|NOON(?:_PRO)? Build|SPACE10_(?:PLUS|PRO)_3G|THOR_?10|TAO_X10|RAPID_?(?:10|7)_?LTE|MAVEN_?10_|CONNECT[78]|ELEMENT10_PLUS_3G|XELIO[_0-9P]|ADM816HC|ADM8000KP|NEO6_LTE|EOS10|AEON|FALCON_10_PLUS_3G|FUSION|THANOS_10|MAVEN_X10_HD(?:_LTE)?|JUNIOR_8_PRO'
+  regex: 'ODYS[ _-]|IEOS[_ ]([^/;]+)|NOON(?:_PRO)? Build|SPACE10_(?:PLUS|PRO)_3G|THOR_?10|TAO_X10|RAPID_?(?:10|7)_?LTE|MAVEN_?10_|CONNECT[78]|ELEMENT10_PLUS_3G|XELIO[_0-9P]|ADM816HC|ADM8000KP|NEO6_LTE|EOS10|AEON|FALCON_10_PLUS_3G|FUSION|THANOS_10|MAVEN_X10_HD(?:_LTE)?|JUNIOR_8_PRO|PYRO_7_PLUS_3G'
   device: 'tablet'
   models:
     - regex: 'XELIO[_ ]A10'
@@ -10016,6 +10016,8 @@ Odys:
       device: 'smartphone'
     - regex: 'ADM8000KP'
       model: 'Titan'
+    - regex: 'PYRO_7_PLUS_3G'
+      model: 'Pyro 7 Plus 3G'
     - regex: 'THOR_?10_PLUS_3G'
       model: 'Thor 10 Plus 3G'
     - regex: 'IEOS[ _]([^/;]+) Build'
@@ -17690,3 +17692,8 @@ Fonos:
   device: 'smartphone'
   model: '$1'
 
+# Conquest
+Conquest:
+  regex: 'Conquest-(S(?:[68]|1[0126])|F2)(?:[);/ ]|$)'
+  device: 'smartphone'
+  model: '$1'
